--- a/templates/base.pug
+++ b/templates/base.pug
@@ -1,6 +1,9 @@
 doctype html
 html(lang="en")
   head
+    meta(charset='utf-8')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
+    link(rel='stylesheet' href='css/bundle.css')
     title= title
   body
     header
